--- a/phploy.ini
+++ b/phploy.ini
@@ -5,7 +5,7 @@
     ; exclude[] = 'src/*'
     ; include[] = "dist/app.css"
 
-[api-prod]
+[api-prod-with-vendor]
     scheme = sftp
     host = f30-preview.awardspace.net
     path = /api-ilyes69.atwebpages.com
@@ -13,5 +13,14 @@
     user = 4294083_ilyes
     pass = "_ET)AtGg89^kk/1O"
     include[] = "vendor"
+    include[] = "public/bundles"
     
-    
+
+
+[api-prod-without-vendor]
+    scheme = sftp
+    host = f30-preview.awardspace.net
+    path = /api-ilyes69.atwebpages.com
+    port = 221
+    user = 4294083_ilyes
+    pass = "_ET)AtGg89^kk/1O"
