--- a/phploy.ini
+++ b/phploy.ini
@@ -14,6 +14,7 @@
     pass = "_ET)AtGg89^kk/1O"
     include[] = "vendor"
     include[] = "public/bundles"
+    include[] = "public/build"
     
 
 
@@ -24,3 +25,5 @@
     port = 221
     user = 4294083_ilyes
     pass = "_ET)AtGg89^kk/1O"
+    include[] = "public/bundles"
+    include[] = "public/build"
